--- a/The Yosneaker Parent/upload/pom.xml
+++ b/The Yosneaker Parent/upload/pom.xml
@@ -16,6 +16,14 @@
 	</properties>
 
 	<dependencies>
+
+	<dependency>
+		<groupId>com.loopj.android</groupId>
+		<artifactId>android-async-http</artifactId>
+		<version>1.4.6</version>
+	</dependency>
+		
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
