修复服务器英文系统无法返回文件路径的bug

--- a/The Yosneaker Parent/upload/src/main/resources/log4j.properties
+++ b/The Yosneaker Parent/upload/src/main/resources/log4j.properties
@@ -39,3 +39,5 @@ log4j.logger.org.springframework=INFO
 
 #mybaitis
 log4j.logger.org.apache.ibatis=ERROR
+
+log4j.logger.org.yosneaker.upload=DEBUG
