--- a/The Yosneaker Parent/store/src/main/resources/dbconfig/c3p0-config.properties
+++ b/The Yosneaker Parent/store/src/main/resources/dbconfig/c3p0-config.properties
@@ -1,7 +1,7 @@
 c3p0.driverClass=com.mysql.jdbc.Driver
-c3p0.url=jdbc:mysql://localhost:3306/yosneaker?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8
+c3p0.url=jdbc:mysql://54.169.155.135:3306/yosneaker?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8
 c3p0.user=root
-c3p0.password=root
+c3p0.password=yosneaker-rainy
 c3p0.initialPoolSize=2
 c3p0.maxIdleTime=25000
 c3p0.maxPoolSize=20
